<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewmodel"
            type="com.example.listadecontatos.viewModel.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:context=".view.UserFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/LABEL_MEUS_DADOS"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/LABEL_EMAIL"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/value_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@id/textView2"

            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_email"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:hint="@string/HINT_EMAIL"
            android:visibility="gone"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_password"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:hint="@string/HINT_PASSWORD"
            android:visibility="gone"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@{viewmodel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_alterar_dados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/layout_button_login"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/LABEL_ALTERAR_DADOS"
            android:textColor="@color/design_default_color_on_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_link_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/LABEL_DESLOGAR"
            android:textColor="@color/purple_200"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/button_alterar_dados" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_link_desativar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/LABEL_DELETAR_CONTA"
            android:textColor="@color/purple_200"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/label_link_logout"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>