<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <variable
        name="viewmodel"
        type="com.example.listadecontatos.viewModel.LoginViewModel" />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".view.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_login"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@mipmap/logo_round"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_email"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:hint="@string/HINT_EMAIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:errorEnabled="true"
        android:layout_marginTop="20dp">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/input_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@{viewmodel.email}"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_password"
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        android:layout_height="90dp"
        android:hint="@string/HINT_PASSWORD"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        app:layout_constraintStart_toStartOf="parent">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/input_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:text="@{viewmodel.password}"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/BUTTON_LOGIN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/layout_button_login"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintTop_toBottomOf="@id/text_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_desc_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ainda não criou sua conta?"
        android:gravity="center"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="85dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_link_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LABEL_CADASTRO"
        android:textColor="@color/purple_200"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Login"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_login"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>