<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_item_contact"
        android:padding="20dp">

        <TextView
            android:id="@+id/label_name_lyt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/LABEL_NAME"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/value_name_ctt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mario Ferreira"
            android:paddingStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/label_name_lyt"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/label_tel_lyt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/LABEL_NUMBER"
            app:layout_constraintTop_toBottomOf="@id/label_name_lyt"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/value_tel_ctt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mario Ferreira"
            android:paddingStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/label_tel_lyt"
            app:layout_constraintTop_toBottomOf="@id/value_name_ctt"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/label_email_lyt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/LABEL_EMAIL"
            app:layout_constraintTop_toBottomOf="@id/label_tel_lyt"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/value_email_ctt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mario Ferreira"
            android:paddingStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/label_email_lyt"
            app:layout_constraintTop_toTopOf="@id/label_email_lyt"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_delete"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:backgroundTint="@color/delete"
            android:src="@drawable/icon_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_edit"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:src="@drawable/icon_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_delete"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>